--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^1.0.0
+  go_router: ^5.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
