--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   supabase_flutter: ^1.0.0
   go_router: ^5.1.2
   flutter_dotenv: ^5.0.2
+  flutter_bloc: ^8.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
