--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   go_router: ^5.1.2
   flutter_dotenv: ^5.0.2
   flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
